syntax = "proto3";
package auth;

option go_package = "github.com/tectix/mysticfunds/proto/auth";

service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse) {}
    rpc Login(LoginRequest) returns (AuthResponse) {}
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}


message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
  }
  
  message LoginRequest {
    string username = 1;
    string password = 2;
  }
  
  message AuthResponse {
    string token = 1;
    int64 user_id = 2;
  }
  
  message ValidateTokenRequest {
    string token = 1;
  }
  
  message ValidateTokenResponse {
    bool is_valid = 1;
    int64 user_id = 2;
  }

  message RefreshTokenRequest {
    string token = 1;
  }

 message RefreshTokenResponse {
    string token = 1;
    int64 user_id = 2;
  }

  message LogoutRequest {
    string token = 1;
    }
  message LogoutResponse {
    bool success = 1;
  } 